# biz/handler/tenant/delete_tenant.go
@@ -2,7 +2,7 @@ package tenant
 
 import (
 	"gin_template/biz/dal"
-	"gin_template/biz/response"
+	"gin_template/biz/handler"
 	"gin_template/utils"
 	"net/http"
 	"strconv"
@@ -21,7 +21,7 @@ type DeleteReq struct {
 // @Accept application/json
 // @Produce application/json
 // @Param id path string true "命名空间ID"
-// @Success 200 {object} response.CommonResp
+// @Success 200 {object} handler.CommonResp
 // @Security ApiKeyAuth
 // @router /api/tenant/delete/{id} [DELETE]
 func DeleteTenant(c *gin.Context) {
@@ -30,13 +30,13 @@ func DeleteTenant(c *gin.Context) {
 		c.JSON(400, gin.H{"error": err.Error()})
 		return
 	}
-	resp := new(response.CommonResp)
+	resp := new(handler.CommonResp)
 
 	// 检查是否为管理员
 	err := utils.IsAdmin(c)
 	if err != nil {
-		c.JSON(http.StatusOK, &response.CommonResp{
-			Code: response.Code_Unauthorized,
+		c.JSON(http.StatusOK, &handler.CommonResp{
+			Code: handler.Code_Unauthorized,
 			Msg:  err.Error(),
 		})
 		return
@@ -46,20 +46,20 @@ func DeleteTenant(c *gin.Context) {
 	id, _ := strconv.Atoi(req.ID)
 	tenantInfo, err := dal.GetTenantById(uint(id))
 	if err != nil {
-		c.JSON(http.StatusOK, &response.CommonResp{Code: response.Code_DBErr, Msg: "查询命名空间失败: " + err.Error()})
+		c.JSON(http.StatusOK, &handler.CommonResp{Code: handler.Code_DBErr, Msg: "查询命名空间失败: " + err.Error()})
 		return
 	}
 	if tenantInfo == nil {
-		c.JSON(http.StatusOK, &response.CommonResp{Code: response.Code_Err, Msg: "命名空间不存在"})
+		c.JSON(http.StatusOK, &handler.CommonResp{Code: handler.Code_Err, Msg: "命名空间不存在"})
 		return
 	}
 
 	if err = dal.DeleteTenant(uint(id)); err != nil {
-		c.JSON(http.StatusOK, &response.CommonResp{Code: response.Code_DBErr, Msg: "删除命名空间失败: " + err.Error()})
+		c.JSON(http.StatusOK, &handler.CommonResp{Code: handler.Code_DBErr, Msg: "删除命名空间失败: " + err.Error()})
 		return
 	}
 
-	resp.Code = response.Code_Success
+	resp.Code = handler.Code_Success
 	resp.Msg = "删除命名空间成功"
 
 	c.JSON(http.StatusOK, resp)
