# biz/handler/user/create_user.go
@@ -2,8 +2,8 @@ package user
 
 import (
 	"gin_template/biz/dal"
+	"gin_template/biz/handler"
 	"gin_template/biz/model"
-	"gin_template/biz/response"
 	"gin_template/utils"
 	"net/http"
 
@@ -21,7 +21,7 @@ type CreateReq struct {
 // @Accept application/json
 // @Produce application/json
 // @Param req body CreateReq true "用户信息"
-// @Success 200 {object} response.CommonResp
+// @Success 200 {object} handler.CommonResp
 // @Security ApiKeyAuth
 // @router /api/user/add [PUT]
 func CreateUser(c *gin.Context) {
@@ -30,20 +30,20 @@ func CreateUser(c *gin.Context) {
 		c.String(http.StatusBadRequest, err.Error())
 		return
 	}
-	resp := new(response.CommonResp)
+	resp := new(handler.CommonResp)
 
 	// 先检查用户名是否已存在
 	exist, err := dal.IsUsernameExists(req.Username)
 	if err != nil {
-		c.JSON(http.StatusOK, &response.CommonResp{
-			Code: response.Code_DBErr,
+		c.JSON(http.StatusOK, &handler.CommonResp{
+			Code: handler.Code_DBErr,
 			Msg:  "检查用户名失败: " + err.Error(),
 		})
 		return
 	}
 	if exist {
-		c.JSON(http.StatusOK, &response.CommonResp{
-			Code: response.Code_AlreadyExists,
+		c.JSON(http.StatusOK, &handler.CommonResp{
+			Code: handler.Code_AlreadyExists,
 			Msg:  "该用户已存在",
 		})
 		return
@@ -51,8 +51,8 @@ func CreateUser(c *gin.Context) {
 
 	err = utils.IsAdmin(c)
 	if err != nil {
-		c.JSON(http.StatusOK, &response.CommonResp{
-			Code: response.Code_Unauthorized,
+		c.JSON(http.StatusOK, &handler.CommonResp{
+			Code: handler.Code_Unauthorized,
 			Msg:  err.Error(),
 		})
 		return
@@ -65,11 +65,11 @@ func CreateUser(c *gin.Context) {
 	}
 
 	if err = dal.CreateUser([]*model.User{u}); err != nil {
-		c.JSON(http.StatusOK, &response.CommonResp{Code: response.Code_DBErr, Msg: "用户新建失败: " + err.Error()})
+		c.JSON(http.StatusOK, &handler.CommonResp{Code: handler.Code_DBErr, Msg: "用户新建失败: " + err.Error()})
 		return
 	}
 
-	resp.Code = response.Code_Success
+	resp.Code = handler.Code_Success
 	resp.Msg = "新建用户成功"
 
 	c.JSON(http.StatusOK, resp)
