# biz/handler/user/update_user.go
@@ -2,7 +2,7 @@ package user
 
 import (
 	"gin_template/biz/dal"
-	"gin_template/biz/response"
+	"gin_template/biz/handler"
 	"gin_template/utils"
 	"net/http"
 	"strconv"
@@ -27,7 +27,7 @@ type UpdateUriReq struct {
 // @Produce application/json
 // @Param user_id path string true "用户ID"
 // @Param req body UpdateReq true "更新信息"
-// @Success 200 {object} response.CommonResp
+// @Success 200 {object} handler.CommonResp
 // @Security ApiKeyAuth
 // @router /api/user/update/{user_id} [POST]
 func UpdateUser(c *gin.Context) {
@@ -41,14 +41,14 @@ func UpdateUser(c *gin.Context) {
 		c.String(http.StatusBadRequest, err.Error())
 		return
 	}
-	resp := new(response.CommonResp)
+	resp := new(handler.CommonResp)
 
 	userId, _ := strconv.Atoi(uriReq.UserId)
 	tokenUserId, _ := utils.GetUseridFromContext(c)
 
 	if userId != tokenUserId {
 		if tokenUserId != 1 {
-			c.JSON(http.StatusOK, &response.CommonResp{Code: response.Code_Unauthorized, Msg: "不能修改别人的信息"})
+			c.JSON(http.StatusOK, &handler.CommonResp{Code: handler.Code_Unauthorized, Msg: "不能修改别人的信息"})
 			return
 		}
 	}
@@ -56,15 +56,15 @@ func UpdateUser(c *gin.Context) {
 	// 获取用户信息
 	userData, err := dal.GetUserByID(userId)
 	if err != nil {
-		c.JSON(http.StatusOK, &response.CommonResp{
-			Code: response.Code_DBErr,
+		c.JSON(http.StatusOK, &handler.CommonResp{
+			Code: handler.Code_DBErr,
 			Msg:  "数据库查询错误: " + err.Error(),
 		})
 		return
 	}
 	if userData == nil {
-		c.JSON(http.StatusOK, &response.CommonResp{
-			Code: response.Code_DBErr,
+		c.JSON(http.StatusOK, &handler.CommonResp{
+			Code: handler.Code_DBErr,
 			Msg:  "用户未找到",
 		})
 		return
@@ -76,15 +76,15 @@ func UpdateUser(c *gin.Context) {
 		// 先检查用户名是否已存在
 		exist, err := dal.IsUsernameExists(*req.Username)
 		if err != nil {
-			c.JSON(http.StatusOK, &response.CommonResp{
-				Code: response.Code_DBErr,
+			c.JSON(http.StatusOK, &handler.CommonResp{
+				Code: handler.Code_DBErr,
 				Msg:  "检查用户名失败: " + err.Error(),
 			})
 			return
 		}
 		if exist && userData.Username != *req.Username {
-			c.JSON(http.StatusOK, &response.CommonResp{
-				Code: response.Code_AlreadyExists,
+			c.JSON(http.StatusOK, &handler.CommonResp{
+				Code: handler.Code_AlreadyExists,
 				Msg:  "该用户已存在",
 			})
 			return
@@ -98,15 +98,15 @@ func UpdateUser(c *gin.Context) {
 	// 方法保存数据
 	err = dal.UpdateUser(userData)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, &response.CommonResp{
-			Code: response.Code_DBErr,
+		c.JSON(http.StatusInternalServerError, &handler.CommonResp{
+			Code: handler.Code_DBErr,
 			Msg:  "更新用户信息失败: " + err.Error(),
 		})
 		return
 	}
 
 	// 返回成功响应
-	resp.Code = response.Code_Success
+	resp.Code = handler.Code_Success
 	resp.Msg = "用户信息更新成功"
 
 	c.JSON(http.StatusOK, resp)
